@@ -1,5 +1,10 @@
 2011-12-21  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
+	* new option -help-dialog
+	* update builtin help man page
+
+2011-12-21  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
 	* handle display quit and prooftree process termination
 
 2011-12-20  Hendrik Tews  <tews@os.inf.tu-dresden.de>
